# medicalbot

./: LICENSE  README.md  app.py  pyproject.toml  requirements.txt  store_index.py  template.py
research/: trials.ipynb
src/: helper.py  prompt.py
